@@ -1,2 +1,3 @@
 # Target: ARM running NetBSD
 TDEPFILES= arm-tdep.o armnbsd-tdep.o solib.o solib-svr4.o nbsd-tdep.o
+TM_FILE=tm-nbsd.h
