@@ -1,3 +1,8 @@
+2003-11-14  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* config/arm/nbsd.mt (TM_FILE): Define.
+	* config/arm/tm-nbsd.h: New file.
+
 2003-11-14  Andrew Cagney  <cagney@redhat.com>
 
 	* Makefile.in (ppc-sysv-tdep.o): Update dependencies.
